Fix Netlify config for SPA routing

--- a/backend/netlify.toml
+++ b/backend/netlify.toml
@@ -1,8 +1,9 @@
 [build]
-  publish = "build"
+  base = "backend"
+  publish = "backend/dist"
   command = "npm run build"
 
 [[redirects]]
   from = "/*"
-  to = "./index.html"
+  to = "/index.html"
   status = 200
